--- a/rules.html
+++ b/rules.html
@@ -218,13 +218,23 @@
                 <th>Cost</th>
         </tr>
         <tr>
+                <td>1 - Central Market</td>
+                <td>This would be a larger market that produces +2 Gold</td>
+                <td>50 Gold</td>
+        </tr>
+	<tr>
+                <td>2 - Stock Exchange</td>
+                <td>Countries earn +5% gold from investors in their markets</td>
+                <td>75 Gold</td>
+        </tr>
+	<tr>
+                <td>2 - Trade House</td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td>75 Gold</td>
         </tr>
     </table>
     <br>
-    <h2>Scientific:</h2>
+	  <h2>Scientific:</h2>
     <br>
     <table>
         <tr>
