--- a/rules.html
+++ b/rules.html
@@ -203,6 +203,16 @@
 		<th>Cost</th>
 	</tr>
 	<tr>
+		<td>1 - Formal Military</td>
+		<td>With a formal military, every unit (naval and land) now get a +3 strength bonus.</td>
+		<td>50 gold</td>
+	</tr>
+	<tr>
+		<td>2 - </td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
 		<td></td>
 		<td></td>
 		<td></td>
@@ -219,18 +229,28 @@
         </tr>
         <tr>
                 <td>1 - Central Market</td>
-                <td>This would be a larger market that produces +2 Gold</td>
+                <td>This would be a larger market that produces +2 Gold every turn</td>
                 <td>50 Gold</td>
         </tr>
 	<tr>
                 <td>2 - Stock Exchange</td>
-                <td>Countries earn +5% gold from investors in their markets</td>
+                <td>Players with this tier earn +5% gold from investors in their markets</td>
                 <td>75 Gold</td>
         </tr>
 	<tr>
+                <td>3 - Global Stock Exchange</td>
+                <td>The previous 5% gained is now 10% per turn</td>
+                <td>150 Gold</td>
+        </tr>
+	<tr>
                 <td>2 - Trade House</td>
-                <td></td>
+                <td>You get an extra 5 Gold from every trade.</td>
                 <td>75 Gold</td>
+        </tr>
+	<tr>
+                <td>3 - Customs House</td>
+                <td>Trade Units traveling through your territory, whether or not they are trading with you, must pay a fine (can be a resource of any kind). You also gain 7 gold every trade made with you.</td>
+                <td>150 Gold</td>
         </tr>
     </table>
     <br>
