--- a/rules.html
+++ b/rules.html
@@ -204,18 +204,28 @@
 	</tr>
 	<tr>
 		<td>1 - Formal Military</td>
-		<td>With a formal military, every unit (naval and land) now get a +3 strength bonus.</td>
+		<td>With a formal military, every unit (naval and land) now get a +2 strength bonus</td>
 		<td>50 gold</td>
 	</tr>
 	<tr>
-		<td>2 - </td>
-		<td></td>
-		<td></td>
+		<td>2 - Naval Expertise</td>
+		<td>Naval Units recieve a +3 strength bonus on top of their previous +2 bonus; and, naval units cost 20% less to produce</td>
+		<td>150 gold</td>
 	</tr>
 	<tr>
-		<td></td>
-		<td></td>
-		<td></td>
+		<td>3 - Naval Superpower</td>
+		<td>Your navy can now move an extra 2 tiles per turn, and have an extra +3 bonus to combat strength</td>
+		<td>250 gold</td>
+	</tr>
+	<tr>
+		<td>2 - Land Expertise</td>
+		<td>Land units gain a +3 bonus to strength, and they take 20% less production to produce </td>
+		<td>150 gold</td>
+	</tr>
+	<tr>
+		<td>3 - Land Superpower</td>
+		<td>Your land units now have an extra tile of move speed, and have an extra +3 combat strength</td>
+		<td>250 gold</td>
 	</tr>
     </table>
     <br>
@@ -263,8 +273,38 @@
                 <th>Cost</th>
         </tr>
         <tr>
+                <td>1 - Library</td>
+                <td>(Under Work)</td>
                 <td></td>
+        </tr>
+	<tr>
+                <td>2 - (Improves production)</td>
+                <td>(Under Work)</td>
                 <td></td>
+        </tr>
+	<tr>
+                <td>3 - (Also Improves Production)</td>
+                <td>(Under Work)</td>
+                <td></td>
+        </tr>
+	<tr>
+                <td>2 - (Improves Military Science)</td>
+                <td>(Under Work)</td>
+                <td></td>
+        </tr>
+	<tr>
+                <td>3 - (Also Improves Military Science)</td>
+                <td>(Under Work)</td>
+                <td></td>
+        </tr>
+	<tr>
+                <td>2 - (Allows special units because of generall scientific advances)</td>
+                <td>(Under Work)</td>
+                <td></td>
+        </tr>
+	<tr>
+                <td>3 - (Improves special units because of generall scientific advances)</td>
+                <td>(Under Work)</td>
                 <td></td>
         </tr>
     </table>
