--- a/rules.html
+++ b/rules.html
@@ -49,10 +49,10 @@
         <th>Bonuses</th>
       </tr>
         <td>England</td>
-        <td>+3 Combat strength when sailing</td>
+	    <td>+3 Combat strength when sailing, and starts out with the <a href="anchors.html.special[1]">Formal Military</a> upgrade in the special building tree. Unfortunatly, they also start out with immense debt (-100 gold), this however cannot be used as a cause to reform a government unless the debt increases more.</td>
       <tr>
         <td>Ottoman Empire</td>
-        <td>The spread of Islam gives their land units +3 strength</td>
+        <td>The spread of Islam gives their land units +3 strength, along with the </td>
       </tr>
         <td>Zulu</td>
         <td>Starts with all of Africa<br>Extremely far behind technologically</td>
@@ -150,7 +150,7 @@
 	<li>Once you have completed the tier ladder for a specific special building though, you can move on to a different one.</li>
 	<li>Also, with special buildings, you can only pick one building upgrade for each tier of building</li>
     </ul>
-    <h2>Religous:</h2>
+    <h2 class="special">Religous:</h2>
     <table>
 	<tr>
                 <th>Tier</th>
@@ -194,7 +194,7 @@
         </tr>
     </table>
     <br>
-    <h2>Military:</h2>
+    <h2 class="special">Military:</h2>
     <br>
     <table>
 	<tr>
@@ -204,7 +204,7 @@
 	</tr>
 	<tr>
 		<td>1 - Formal Military</td>
-		<td>With a formal military, every unit (naval and land) now get a +2 strength bonus</td>
+		<td>With a new more organised military, every unit (naval and land) now get a +2 strength bonus. Remember that strengths like this can be used to leverage influence over other leaders</td>
 		<td>50 gold</td>
 	</tr>
 	<tr>
@@ -229,7 +229,7 @@
 	</tr>
     </table>
     <br>
-    <h2>Economic:</h2>
+    <h2 class="special">Economic:</h2>
     <br>
     <table>
         <tr>
@@ -264,7 +264,7 @@
         </tr>
     </table>
     <br>
-	  <h2>Scientific:</h2>
+	  <h2 class="special">Scientific:</h2>
     <br>
     <table>
         <tr>
@@ -274,38 +274,38 @@
         </tr>
         <tr>
                 <td>1 - Library</td>
-                <td>(Under Work)</td>
-                <td></td>
+                <td>the vast array of knowledge at your disposal gives you an extra 1 science per turn</td>
+                <td>100 gold</td>
         </tr>
 	<tr>
-                <td>2 - (Improves production)</td>
-                <td>(Under Work)</td>
-                <td></td>
+                <td>2 - Simple Machinery</td>
+                <td>New technology allows you to mesh more science with basic tasks to make them take less time/energy. Increase production of every production-based building by 2 per turn</td>
+                <td>150 gold</td>
         </tr>
 	<tr>
-                <td>3 - (Also Improves Production)</td>
-                <td>(Under Work)</td>
-                <td></td>
+                <td>3 - Advanced Machinery</td>
+                <td>More scientific advances have allowed your civilization to decrease the usage of energy/time. Increase the amount of production per building by 5 on top of the previous bonus</td>
+                <td>150 gold</td>
         </tr>
 	<tr>
-                <td>2 - (Improves Military Science)</td>
-                <td>(Under Work)</td>
-                <td></td>
+                <td>2 - Scientific Weaponry</td>
+                <td>The cutting edge technology you own gives all of your units a +1 strength bonus, and allows them to move an extra tile.</td>
+                <td>100 gold</td>
         </tr>
 	<tr>
-                <td>3 - (Also Improves Military Science)</td>
-                <td>(Under Work)</td>
-                <td></td>
+                <td>3 - Advanced Scientific Weaponry</td>
+                <td>The cost of science when purchasing military technology is reduced by 2, and you have an extra 1 tile movement on top of the previous bonus.</td>
+                <td>200 Gold</td>
         </tr>
 	<tr>
-                <td>2 - (Allows special units because of generall scientific advances)</td>
-                <td>(Under Work)</td>
-                <td></td>
+                <td>2 - Scientific Method</td>
+                <td>The Scientific method improves the rate and the veriety of producing new ideas. This in turn increases the rate of scientific production (+3 science per turn on top of previous bonuses)</td>
+                <td>120 Gold</td>
         </tr>
 	<tr>
-                <td>3 - (Improves special units because of generall scientific advances)</td>
-                <td>(Under Work)</td>
-                <td></td>
+                <td>3 - World Library</td>
+                <td>The support of the scientific community has allowed your country to recieve a one of a kind library. Every time a unit trades with you, you recieve 1 science.</td>
+                <td>200 Gold</td>
         </tr>
     </table>
     <script>
