--- a/rules.html
+++ b/rules.html
@@ -49,10 +49,29 @@
         <th>Bonuses</th>
       </tr>
         <td>England</td>
-	    <td>+3 Combat strength when sailing, and starts out with the <a href="anchors.html.special[1]">Formal Military</a> upgrade in the special building tree. Unfortunatly, they also start out with immense debt (-100 gold), this however cannot be used as a cause to reform a government unless the debt increases more.</td>
+	    <td>Bonuses:
+		    <ul>
+			    <li>+3 Combat strength for naval units for 5 turns</li>
+			    <li>Begins the <a href="#special2">Formal Military</a> upgrade in the special buildings tree</li>
+			    <li>Owns the 13 Colonies</li>
+			    <li>Owns all of India</li>
+		    </ul>
+		Penalties:
+		    <ul>
+			    <li>Begins with -100 Gold (is not cause for reformation unless it goes down further)</li>
+		    </ul>
+	    </td>
       <tr>
         <td>Ottoman Empire</td>
-        <td>The spread of Islam gives their land units +3 strength, along with the </td>
+        <td>Bonuses:
+		    <ul>
+			    <li></li>
+		    </ul>
+		Penalties:
+		    <ul>
+			    <li></li>
+		    </ul>
+	</td>
       </tr>
         <td>Zulu</td>
         <td>Starts with all of Africa<br>Extremely far behind technologically</td>
@@ -150,7 +169,7 @@
 	<li>Once you have completed the tier ladder for a specific special building though, you can move on to a different one.</li>
 	<li>Also, with special buildings, you can only pick one building upgrade for each tier of building</li>
     </ul>
-    <h2 class="special">Religous:</h2>
+    <h2 id="special1">Religous:</h2>
     <table>
 	<tr>
                 <th>Tier</th>
@@ -194,7 +213,7 @@
         </tr>
     </table>
     <br>
-    <h2 class="special">Military:</h2>
+    <h2 id="special2">Military:</h2>
     <br>
     <table>
 	<tr>
@@ -229,7 +248,7 @@
 	</tr>
     </table>
     <br>
-    <h2 class="special">Economic:</h2>
+    <h2 id="special3">Economic:</h2>
     <br>
     <table>
         <tr>
@@ -264,7 +283,7 @@
         </tr>
     </table>
     <br>
-	  <h2 class="special">Scientific:</h2>
+	  <h2 id="special4">Scientific:</h2>
     <br>
     <table>
         <tr>
