--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
         padding-top: 14px;
         margin-top: 3%;
       }
-      iframe{
-        border: 4px solid  #F0EFF4;
-        border-radius: 3px;
-        margin: 14px auto;
-        margin-bottom: 5%;
-      }
     </style>
   </head>
   <body>
     <div class="titleBar">
-      <img src="CivLogo.png" onclick="location.href='index.html';"><button class="titleBtn" onclick="location.href='calc.html';">Calculator</button><button class="titleBtn" onclick="location.href='rules.html';">Rules</button><button class="titleBtn"onclick="location.href='class.html';">Class Information</button>
+      <img src="CivLogo.png" onclick="location.href='index.html';" id="ttlIMG"><button class="titleBtn" onclick="location.href='calc.html';">Calculator</button><button class="titleBtn" onclick="location.href='rules.html';">Rules</button><button class="titleBtn"onclick="location.href='class.html';">Class Information</button>
     </div>
     <div id="bodyDiv">
       <h2 id="live">Civilization Trailer (May clarify the type of game being played):</h2>
