--- a/class.html
+++ b/class.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     <div class="titleBar">
-      <img src="CivLogo.png" onclick="location.href='index.html';"><button class="titleBtn" onclick="location.href='calc.html';">Calculator</button><button class="titleBtn" onclick="location.href='rules.html';">Rules</button><button class="titleBtn"onclick="location.href='class.html';">Class Information</button>
+      <img src="CivLogo.png" onclick="location.href='index.html';" id="ttlIMG"><button class="titleBtn" onclick="location.href='calc.html';">Calculator</button><button class="titleBtn" onclick="location.href='rules.html';">Rules</button><button class="titleBtn"onclick="location.href='class.html';">Class Information</button>
     </div>
     <div id="contents">
 	<br>
