--- a/calc.html
+++ b/calc.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="titleBar">
-      <img src="CivLogo.png" onclick="location.href='index.html';"><button class="titleBtn" onclick="location.href='calc.html';">Calculator</button><button class="titleBtn" onclick="location.href='rules.html';">Rules</button><button class="titleBtn"onclick="location.href='class.html';">Class Information</button>
+      <img src="CivLogo.png" onclick="location.href='index.html';" id="ttlIMG"><button class="titleBtn" onclick="location.href='calc.html';">Calculator</button><button class="titleBtn" onclick="location.href='rules.html';">Rules</button><button class="titleBtn"onclick="location.href='class.html';">Class Information</button>
     </div>
       <div>
         <br><label for="inp1">Number of Cities:</label><br>
