--- a/rules.html
+++ b/rules.html
@@ -38,7 +38,7 @@
       }
       .smallDiv{
         border: 1px solid white;
-        border-radius: 40px;
+        border-radius: 20px;
         width: 30%;
         margin: 0 auto;
         margin-top: 1%;
@@ -98,11 +98,12 @@
 	      <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
+            <li>+ 3 combat strength for naval units (for the first 5 turns)</li>
+            <li>Owns the Thirteen Colonies</li>
           </ul>
           <h3>Negative Effects:</h3>
           <ul>
-            <li></li>
+            <li>Starts with -50 Gold (Can not be justified as reformation unless debt goes up)</li>
           </ul>
         </td>
       <tr>
@@ -110,11 +111,13 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
+            <li>+3 combat strength for land units (lasts for the first 5 turns)</li>
+            <li>Holds a Holy City (owns the benefits for the special buildings branch for Holy Cities)</li>
           </ul>
           <h3>Negative Effects:</h3>
           <ul>
-            <li></li>
+            <li>Begins hostile to European Nations</li>
+            <li>Due to scientific production being halted heavily compared to European science, Ottomans only earn 1 science every turns (lasts for 8 turns)</li>
           </ul>
         </td>
       </tr>
@@ -122,11 +125,11 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
+            <li>Owns all of Africa</li>
           </ul>
           <h3>Negative Effects:</h3>
           <ul>
-            <li></li>
+            <li>Science status is at 10</li>
           </ul>
         </td>
       <tr>
@@ -134,11 +137,12 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
+            <li>Start with protection of England</li>
           </ul>
           <h3>Negative Effects:</h3>
           <ul>
-            <li></li>
+            <li>Science starts at 10</li>
+            <li>Owned by England</li>
           </ul>
         </td>
       </tr>
@@ -146,11 +150,8 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
-          </ul>
-          <h3>Negative Effects:</h3>
-          <ul>
-            <li></li>
+            <li>+3 Production per turn (Lasts for 7 turns)</li>
+            <li>+2 Combat Strength (Lasts for 7 turns)</li>
           </ul>
         </td>
       <tr>
@@ -158,11 +159,8 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
-          </ul>
-          <h3>Negative Effects:</h3>
-          <ul>
-            <li></li>
+            <li>+3 production per turn (Lasts for 5 turns)</li>
+            <li>Starts with a common market</li>
           </ul>
         </td>
       </tr>
@@ -170,11 +168,8 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
-          </ul>
-          <h3>Negative Effects:</h3>
-          <ul>
-            <li></li>
+            <li>Starts as the Holy Roman Emporer</li>
+            <li>+3 combat strength (Lasts for 4 turns)</li>
           </ul>
         </td>
       <tr>
@@ -182,11 +177,8 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
-          </ul>
-          <h3>Negative Effects:</h3>
-          <ul>
-            <li></li>
+            <li>Begins with the Common Market</li>
+            <li>+1 tile movement of non-military units in the water</li>
           </ul>
         </td>
       </tr>
@@ -194,11 +186,12 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
+            <li>Begins with the New Religion upgrade in the Special Building section of the Rules Page</li>
+            <li>+2 combat strength when in terain (permanent effect)</li>
           </ul>
           <h3>Negative Effects:</h3>
           <ul>
-            <li></li>
+            <li>Begins with -20 Gold</li>
           </ul>
         </td>
       <tr>
@@ -206,11 +199,7 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
-          </ul>
-          <h3>Negative Effects:</h3>
-          <ul>
-            <li></li>
+            <li>+3 production per turn (lasts for 5 turns)</li>
           </ul>
         </td>
       </tr>
@@ -218,11 +207,7 @@
         <td>
           <h3>Positive Effects:</h3>
           <ul>
-            <li></li>
-          </ul>
-          <h3>Negative Effects:</h3>
-          <ul>
-            <li></li>
+            <li>The Bushido gives Japan a perminent +2 combat strenth</li>
           </ul>
         </td>
       <tr>
@@ -357,8 +342,8 @@
             <h3>Cost: 40 Gold</h3>
           </td>
           <td class="upgradeTd">
-            <h3>Tier 2 - Reform a Church</h3>
-            <h4>You create a new version of this religion (this makes you an enemy of the original religion but the people who own the holy city of that religion). Choose 1 bonus, and 3 negative effects for your new-ish religion (talk to the game master about bonuses and negatives)</h4>
+            <h3>Tier 2 - New Religion</h3>
+            <h4>You create a new religion (this makes you an enemy of the original religion you were apart of). Choose 1 bonus, and 3 negative effects for your new religion (talk to the game master about bonuses and negatives)</h4>
             <h3>Cost: 50 Gold</h3>
           </td>
           <td class="upgradeTd">
