--- a/calc.html
+++ b/calc.html
@@ -17,15 +17,32 @@
 		text-align: center;
 		width: 97%;
 		outline: none;
+    margin-top: 1%;
+    margin-bottom: 1%;
 	}
-	#btnSubmit{
+	.btnSubmit{
 		font-size: 20px;
     color: white;
     border: 1px solid white;
     border-radius: 20px;
+    width: 30%;
+    transition: all 0.3s;
+    margin: 1%;
 	}
-  #btnSubmit:hover{
-    border: 1px solid #FFBC42;
+  .btnSubmit:hover{
+    background-color: white;
+    color: #003554;
+    width: 34%;
+  }
+  #prevAmnt{
+    margin-top: 5%;
+  }
+  .inpDiv{
+    width: 90%;
+    margin: 0 auto;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 3%;
   }
     </style>
   </head>
@@ -33,34 +50,51 @@
     <div class="titleBar">
       <img src="CivLogo.png" onclick="location.href='index.html';" id="ttlIMG"><button class="titleBtn" onclick="location.href='calc.html';">Calculator</button><button class="titleBtn" onclick="location.href='rules.html';">Rules</button><button class="titleBtn"onclick="location.href='class.html';">Class Information</button>
     </div>
-      <div>
-        <br><label for="inp1">Number of Cities:</label><br>
-        <input type="number" class="inp" id="inp1" value="0" min="0">
-	      <br><br><br><label for="inp2">Production Per Turn:</label><br>
-        <input type="number" class="inp" id="inp2" value="0" min="0">
-	      <br><br><br><label for="inp3">Outside Money:</label><br>
-        <input type="number" class="inp" id="inp3" value="0" min="0">
+    <div class="inpDiv">
+        <h1>Default Gold Per Turn Calculator</h1>
+        <label for="inp1">Number of Cities:</label>
+        <input type="number" class="inp" value="0" min="0">
+	      <label for="inp2">Production Per Turn:</label>
+        <input type="number" class="inp" value="0" min="0">
+	      <label for="inp3">Outside Money:</label>
+        <input type="number" class="inp" value="0" min="0">
         <br>
+        <button class="btnSubmit">Submit</button>
+        <h2>Gold this turn: <span id="span1"></span></h2>
       </div>
-    <br>
-    <button id="btnSubmit">Submit</button>
-    <br>
-    <h2 id="h2"></h2>
+      <br>
+      <br>
+      <br>
+      <div class="inpDiv">
+        <h1>Stock Exchange Calculator</h1>
+        <h3>Gold Before Stock Exchange: <span id="prevAmnt"></span></h3>
+        <label for="inp1">Percentage:</label>
+        <input type="number" class="inp" value="0" min="0">
+        <br>
+        <button class="btnSubmit">Submit</button>
+        <h2>Gold After Stock Exchange: <span id="stockBtn"></span></h2>
+    </div>
   <script>
         var img = document.querySelector("img");
 
         img.addEventListener("click", function(){
             self.location = "index.html";
         });
-        var input1 = document.querySelector("#inp1");
-        var input2 = document.querySelector("#inp2");
-        var input3 = document.querySelector("#inp3");
-        var submit = document.querySelector("#btnSubmit");
-        var place = document.querySelector("#h2");
+        var input = document.querySelectorAll(".inp");
+        var submit = document.querySelectorAll(".btnSubmit");
+        var place = document.querySelector("#span1");
+        var prevAmnt = document.querySelector("#prevAmnt");
+        var stockAmount = document.querySelector("#stockBtn");
+        var totalGold = 0;
 
-        submit.addEventListener("click", function(){
-          var totalGold = 2 * Math.sqrt(parseInt(input1.value) * parseInt(input2.value)) + parseInt(input3.value);
-          place.textContent = "Gold this turn: " + Math.round(totalGold);
+        submit[0].addEventListener("click", function(){
+          totalGold = 2 * Math.sqrt(parseInt(input[0].value) * parseInt(input[1].value)) + parseInt(input[2].value);
+          place.textContent = Math.round(totalGold);
+          prevAmnt.textContent = Math.round(totalGold);
+        });
+        submit[1].addEventListener("click", function(){
+          var stockGold = Math.round(parseInt(input[3].value)/100 * totalGold);
+          stockAmount.textContent = stockGold + totalGold;
         });
   </script>
   </body>
