--- a/class.html
+++ b/class.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <title>Civilization Simulation</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link rel="icon" type="image/png" href="CivLogo.png">
@@ -27,22 +26,23 @@
         height: 70px;
         transition: 0.3s;
       }
-      button{
-        margin-right: 10px;
-	margin-left: 10px;
-      }
+
       .period{
-	border: 1px solid white;
-	padding: 10px;
-	width: 30%;
-  	border-radius: 20px;
-	background-color: white;
-	color: #003554;
+        background: none;
+        color: white;
+	      border: 1px solid white;
+	      padding: 0.5%;
+	      width: 30%;
+  	    border-radius: 20px;
+        margin: auto;
+        margin-left: 1%;
+        margin-right: 1%;
+        width: 30%;
       }
       .period:hover{
-	background: none;
-	color: white;
-	width: 30%;
+        background-color: white;
+        color: #003554;
+        width: 30%;
       }
     </style>
   </head>
@@ -85,7 +85,7 @@
      var period3 = [
        {name:"Daniel",country:"",summary:""},
        {name:"Simon", country:"", summary:""},
-       {name:"", country:"", summary:""},
+       {name:"Jacopo", country:"", summary:""},
        {name:"", country:"", summary:""},
        {name:"", country:"", summary:""},
        {name:"", country:"", summary:""}
