--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="CivLogo.png" onclick="location.href='index.html';" id="ttlIMG"><button class="titleBtn" onclick="location.href='calc.html';">Calculator</button><button class="titleBtn" onclick="location.href='rules.html';">Rules</button><button class="titleBtn"onclick="location.href='class.html';">Class Information</button>
     </div>
     <div id="bodyDiv">
-      <h2 id="live">Civilization Trailer (May clarify the type of game being played):</h2>
+      <h2 id="live">Live Game:</h2>
       <iframe width="840" height="472.5" src="https://www.youtube.com/embed/5KdE0p2joJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <script type="text/javascript" src="app.js"></script>
