--- a/rules.html
+++ b/rules.html
@@ -749,7 +749,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>Irionclads</td>
+          <td>Ironclads</td>
           <td></td>
         </tr>
         <tr>
